Fix typer and aside
Fixing aside in mobile and typer extra line.

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <header>
                     <!-- IMAGEN bigotes -->
                     <img src='img/svg/bigote.svg' id="bigotes" class="svg">
-                    <h3>Pon un gato en tu vida.<span id="escritura"></span></h3>
+                    <h3>Pon un gato en tu vida. <br><span id="escritura"></span></h3>
                     <hr>
                 </header>
                 <p>Head nudges grab pompom in mouth and put in water dish yet step on your keyboard while you're gaming. </p>
