--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <hr>
                 </header>
                 <p>Head nudges grab pompom in mouth and put in water dish yet step on your keyboard while you're gaming. </p>
-                <a class="btn" href="#">
+                <a class="btn" href="http://proteccionfelina.org/la-39/adoptar-gatos" target="_blank">
                     <svg>
                         <rect x="0" y="0" fill="none" width="100%" height="100%"/>
                     </svg>
@@ -207,7 +207,7 @@
                 <div class="col-md-8">
                     <h3><span id="escritura2"></span></h3>
                     <p>Head nudges grab pompom in mouth and put in water dish yet step on your keyboard while you're gaming and then turn in a circle , kick up litter and purrr purr littel cat.</p>
-                    <a class="btn" href="#" target="_blank">
+                    <a class="btn" href="http://proteccionfelina.org/articulo-73-castrar-gatos-callejeros" target="_blank">
                         <svg>
                             <rect x="0" y="0" fill="none" width="100%" height="100%"/>
                         </svg>
@@ -238,7 +238,7 @@
     </div>
 </section>
 
-<aside id="hipsterCat">
+<aside id="showerCat">
     <div class="over"></div>    
 </aside>
 
@@ -250,11 +250,11 @@
         <div class="row">
             <div class="col-sm-4">
                 <div id="socios" class="svg"></div>                        
-                <h4>Socios</h4>
+                <h4>Únete</h4>
                 <hr>
                 <p>Plan steps for world domination destroy couch as revenge or drink water out of the faucet for chew on cable.</p>
                 <div class="row">
-                    <a class="btn" href="#">
+                    <a class="btn" href="http://proteccionfelina.org/s26/hazte-socio-proteccionfe-felina" target="_blank">
                         <svg>
                             <rect x="0" y="0" fill="none" width="100%" height="100%"/>
                         </svg>
@@ -268,7 +268,7 @@
                 <hr>
                 <p>Plan steps for world domination destroy couch as revenge or drink water out of the faucet for chew on cable.</p>
                 <div class="row">    
-                    <a class="btn" href="#">
+                    <a class="btn" href="http://proteccionfelina.org/s20/casa-de-acogida" target="_blank">
                         <svg>
                             <rect x="0" y="0" fill="none" width="100%" height="100%"/>
                         </svg>
@@ -282,7 +282,7 @@
                 <hr>
                 <p>Plan steps for world domination destroy couch as revenge or drink water out of the faucet for chew on cable.</p>
                 <div class="row">
-                    <a class="btn" href="#">
+                    <a class="btn" href="https://www.teaming.net/proteccionfelina-c-e-s" target="_blank">
                         <svg>
                             <rect x="0" y="0" fill="none" width="100%" height="100%"/>
                         </svg>
@@ -335,13 +335,13 @@
                     <div id="camera"></div>
                     <h4>CoolCats of Instagram</h4>
                     <ul class="instagram">
-                        <li><a href="#"><figure><img src="img/basic/insta1.jpg" alt="Instagram"></figure></a>
+                        <li><a href="https://www.instagram.com/4gatosmadrid/" target="_blank"><figure><img src="img/basic/insta1.jpg" alt="Instagram"></figure></a>
                         </li>
-                        <li><a href="#"><figure><img src="img/basic/insta2.jpg" alt="Instagram"></figure></a>
+                        <li><a href="https://www.instagram.com/4gatosmadrid/" target="_blank"><figure><img src="img/basic/insta2.jpg" alt="Instagram"></figure></a>
                         </li>
-                        <li><a href="#"><figure><img src="img/basic/insta3.jpg" alt="Instagram"></figure></a>
+                        <li><a href="https://www.instagram.com/4gatosmadrid/" target="_blank"><figure><img src="img/basic/insta3.jpg" alt="Instagram"></figure></a>
                         </li>
-                        <li><a href="#"><figure><img src="img/basic/insta4.jpg" alt="Instagram"></figure></a>
+                        <li><a href="https://www.instagram.com/4gatosmadrid/"target="_blank"><figure><img src="img/basic/insta4.jpg" alt="Instagram"></figure></a>
                         </li>
                     </ul>
                 </article>     
@@ -359,11 +359,11 @@
                     <div id="laptop"></div>
                 <h4>Encuéntranos</h4>
                 <ul id="redes">
-                    <li><a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+                    <li><a href="https://www.facebook.com/asociacionproteccionfelina/" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
                     </li>
-                    <li><a href="#" class="fa fa-instagram"></a>
+                    <li><a href="https://www.youtube.com/user/proteccionfelina/videos" target="_blank" class="fa fa-instagram"></a>
                     </li>
-                    <li><a href="#" class="fa fa-twitter"></a>
+                    <li><a href="https://twitter.com/proteccionfelin" target="_blank" class="fa fa-twitter"></a>
                     </li>
                 </ul>
             </div>
@@ -376,7 +376,7 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <small>Bigotazos 2018 | <a href="#" target="_blank">Aviso Legal y cookies</a> | <a href="#">Contacto</a> | Iconos: Flaticon</small>
+                <small>Bigotazos 2018 | <a href="#" target="_blank">Aviso Legal y cookies</a> | <a href="#contacto">Contacto</a> | Iconos: Flaticon</small>
             </div>  
         </div>
     </div> 
